Documentation/demo_apps.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  ports:
  - port: 80
  selector:
    app: app1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  template:
    metadata:
      labels:
        id.app: app1
    spec:
      containers:
      - name: web
        image: cilium/demo-httpd
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        id.app: app2
    spec:
      containers:
      - name: app-frontend
        image: cilium/demo-client
        command: [ "sleep" ]
        args:
          - "1000h"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1
  template:
    metadata:
      labels:
        id.app: app3
    spec:
      containers:
      - name: app-frontend
        image: cilium/demo-client
        command: [ "sleep" ]
        args:
          - "1000h"
